--- a/index.html
+++ b/index.html
@@ -3,107 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login & Registrierung mit Firebase</title>
-    <!-- Firebase SDK einbinden -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <title>Kommentar-System mit Firebase</title>
 </head>
 <body>
-    <h2>Login</h2>
-    <div id="loginForm">
-        <input type="email" id="loginEmail" placeholder="E-Mail" required><br>
-        <input type="password" id="loginPassword" placeholder="Passwort" required><br>
-        <button onclick="login()">Einloggen</button>
-        <p><a href="javascript:showRegister()">Noch kein Konto? Registriere dich hier!</a></p>
+
+    <h1>Kommentar-System</h1>
+
+    <!-- Anzeige der Kommentare -->
+    <div id="comments-container">
+        <!-- Kommentare werden hier angezeigt -->
     </div>
 
-    <h2 id="registerHeader" style="display:none;">Registrierung</h2>
-    <div id="registerForm" style="display:none;">
-        <input type="email" id="registerEmail" placeholder="E-Mail" required><br>
-        <input type="password" id="registerPassword" placeholder="Passwort" required><br>
-        <button onclick="register()">Registrieren</button>
-        <p><a href="javascript:showLogin()">Bereits ein Konto? Melde dich hier an!</a></p>
+    <!-- Kommentar Formular -->
+    <div id="comment-form">
+        <input type="text" id="name" placeholder="Dein Name" />
+        <textarea id="comment-text" placeholder="Schreib einen Kommentar..."></textarea>
+        <button id="submit-comment">Kommentar absenden</button>
     </div>
 
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
     <script>
-        // Firebase-Konfiguration
+        // Firebase-Konfiguration (ersetze mit deinen eigenen Firebase-Daten)
         const firebaseConfig = {
             apiKey: "AIzaSyCtfBgOnp5YZ2xtPzXQ5TqDwAinUIBE1hc",
-            authDomain: "test-9a798.firebaseapp.com",
-            projectId: "test-9a798",
-            storageBucket: "test-9a798.firebasestorage.app",
-            messagingSenderId: "134538517366",
-            appId: "1:134538517366:web:f575ecaa372b28bf767857"
+  authDomain: "test-9a798.firebaseapp.com",
+  databaseURL: "https://test-9a798-default-rtdb.firebaseio.com",
+  projectId: "test-9a798",
+  storageBucket: "test-9a798.firebasestorage.app",
+  messagingSenderId: "134538517366",
+  appId: "1:134538517366:web:f575ecaa372b28bf767857"
         };
 
         // Firebase initialisieren
         const app = firebase.initializeApp(firebaseConfig);
-        const auth = firebase.auth();
+        const database = firebase.database(app);
 
-        // Zeige das Login-Formular
-        function showLogin() {
-            document.getElementById('loginForm').style.display = 'block';
-            document.getElementById('registerForm').style.display = 'none';
-            document.getElementById('registerHeader').style.display = 'none';
-        }
+        // Kommentar absenden
+        document.getElementById("submit-comment").addEventListener("click", () => {
+            const name = document.getElementById("name").value;
+            const commentText = document.getElementById("comment-text").value;
 
-        // Zeige das Registrierungs-Formular
-        function showRegister() {
-            document.getElementById('loginForm').style.display = 'none';
-            document.getElementById('registerForm').style.display = 'block';
-            document.getElementById('registerHeader').style.display = 'block';
-        }
-
-        // Registrierung
-        function register() {
-            const email = document.getElementById('registerEmail').value;
-            const password = document.getElementById('registerPassword').value;
-
-            auth.createUserWithEmailAndPassword(email, password)
-                .then((userCredential) => {
-                    const user = userCredential.user;
-                    alert('Registrierung erfolgreich! Bitte überprüfe deine E-Mails.');
-
-                    // E-Mail-Verifizierung senden
-                    user.sendEmailVerification()
-                        .then(() => {
-                            alert('Verifizierungs-E-Mail gesendet!');
-                            showLogin(); // Zurück zum Login
-                        })
-                        .catch((error) => {
-                            console.error('Fehler beim Senden der E-Mail-Verifizierung:', error.message);
-                            alert('Fehler beim Senden der E-Mail-Verifizierung. Versuch es später erneut.');
-                        });
-                })
-                .catch((error) => {
-                    console.error('Registrierungsfehler:', error.message);
-                    alert('Fehler bei der Registrierung: ' + error.message);
+            if (name.trim() !== "" && commentText.trim() !== "") {
+                const newCommentRef = database.ref('comments').push(); // Erstelle einen neuen Kommentar
+                newCommentRef.set({
+                    name: name,
+                    text: commentText,
+                    timestamp: firebase.database.ServerValue.TIMESTAMP
                 });
-        }
+                document.getElementById("name").value = ""; // Name-Feld leeren
+                document.getElementById("comment-text").value = ""; // Kommentar-Feld leeren
+                loadComments(); // Kommentare neu laden
+            } else {
+                alert("Bitte gib deinen Namen und Kommentar ein!");
+            }
+        });
 
-        // Login
-        function login() {
-            const email = document.getElementById('loginEmail').value;
-            const password = document.getElementById('loginPassword').value;
+        // Kommentare laden
+        function loadComments() {
+            const commentsContainer = document.getElementById("comments-container");
+            commentsContainer.innerHTML = ""; // Container leeren
 
-            auth.signInWithEmailAndPassword(email, password)
-                .then((userCredential) => {
-                    const user = userCredential.user;
-
-                    // Überprüfen, ob der Benutzer seine E-Mail verifiziert hat
-                    if (!user.emailVerified) {
-                        alert('Bitte bestätige deine E-Mail-Adresse, bevor du dich anmelden kannst.');
-                        auth.signOut(); // Benutzer ausloggen
-                    } else {
-                        alert('Erfolgreich eingeloggt!');
-                        // Hier kannst du die Weiterleitung oder ein Dashboard einfügen
-                    }
-                })
-                .catch((error) => {
-                    console.error('Login-Fehler:', error.message);
-                    alert('Fehler beim Login: ' + error.message);
+            const commentsRef = database.ref('comments');
+            commentsRef.once('value', (snapshot) => {
+                snapshot.forEach((childSnapshot) => {
+                    const commentData = childSnapshot.val();
+                    const commentElement = document.createElement("div");
+                    commentElement.innerHTML = `
+                        <strong>${commentData.name}</strong>: ${commentData.text}
+                    `;
+                    commentsContainer.appendChild(commentElement);
                 });
+            });
         }
+
+        // Kommentare beim Laden der Seite abrufen
+        loadComments();
     </script>
+
 </body>
 </html>
